# TKN_praxis

./: .gitignore  CMakeLists.txt  README.md  check_submission.sh  group.txt
